debug with sourcemap

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "types/*.d.ts"
   ],
   "scripts": {
-    "dev": "rollup -w -c build/config.js --environment TARGET:web-full-dev",
-    "dev:cjs": "rollup -w -c build/config.js --environment TARGET:web-runtime-cjs",
-    "dev:esm": "rollup -w -c build/config.js --environment TARGET:web-runtime-esm",
+    "dev": "rollup -m -w -c build/config.js --environment TARGET:web-full-dev",
+    "dev:cjs": "rollup -m -w -c build/config.js --environment TARGET:web-runtime-cjs",
+    "dev:esm": "rollup -m -w -c build/config.js --environment TARGET:web-runtime-esm",
     "dev:test": "karma start test/unit/karma.dev.config.js",
-    "dev:ssr": "rollup -w -c build/config.js --environment TARGET:web-server-renderer",
-    "dev:compiler": "rollup -w -c build/config.js --environment TARGET:web-compiler ",
-    "dev:weex": "rollup -w -c build/config.js --environment TARGET:weex-framework",
-    "dev:weex:factory": "rollup -w -c build/config.js --environment TARGET:weex-factory",
-    "dev:weex:compiler": "rollup -w -c build/config.js --environment TARGET:weex-compiler ",
+    "dev:ssr": "rollup -m -w -c build/config.js --environment TARGET:web-server-renderer",
+    "dev:compiler": "rollup -m -w -c build/config.js --environment TARGET:web-compiler ",
+    "dev:weex": "rollup -m -w -c build/config.js --environment TARGET:weex-framework",
+    "dev:weex:factory": "rollup -m -w -c build/config.js --environment TARGET:weex-factory",
+    "dev:weex:compiler": "rollup -m -w -c build/config.js --environment TARGET:weex-compiler ",
     "build": "node build/build.js",
     "build:ssr": "npm run build -- web-runtime-cjs,web-server-renderer",
     "build:weex": "npm run build -- weex",
